[package]
name = "rend3"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Easy to use, customizable, efficient 3D renderer library built on wgpu."
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.57"

[package.metadata.release]
tag = true
tag-prefix = ""
pre-release-hook = ["cargo", "readme", "-o", "../README.md", "-t", "../README.tpl"]
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]\\(#unreleased\\)"
replace = "[Unreleased](#unreleased)\n- [v{{version}}](#v{{version}})"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[v([0-9+])\\.([0-9+])\\.([0-9+])\\]\\(#v[0-9\\.]+\\)"
replace = "[v$1.$2.$3](#v$1$2$3)"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "## Unreleased"
replace = "## Unreleased\n\n## v{{version}}\n\nReleased {{date}}"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]\\(https://github.com/BVE-Reborn/rend3/compare/v([a-z0-9.-]+)\\.\\.\\.HEAD\\)"
replace = "[Unreleased](https://github.com/BVE-Reborn/rend3/compare/v{{version}}...HEAD)\n- [v{{version}}](https://github.com/BVE-Reborn/rend3/compare/v$1...v{{version}})"

[dependencies]
arrayvec = "0.7"
bimap = "0.6"
bitflags = "1"
bumpalo = "3"
bytemuck = "1"
encase = { version = "0.3" }
flume = "0.10"
glam = { version = "0.21.2", features = ["bytemuck"] }
handlebars = "4"
indexmap = "1"
list-any = "0.2"
log = "0.4"
num-traits = "0.2"
once_cell = "1"
parking_lot = "0.12"
profiling = { version = "1", default-features = false }
range-alloc = "0.1"
rend3-types = { version = "^0.3.0", path = "../rend3-types" }
rust-embed = { version = "6", features = ["interpolate-folder-path"] }
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
smartstring = "1.0"
thiserror = "1"
wgpu = "0.13"
wgpu-profiler = "0.9.0"

# Hard dependencies on new versions of transitive deps
wgpu-core = "0.13.2"
wgpu-hal = "0.13.2"
naga = "0.9.0"

[dev-dependencies]
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Needed to embed shaders in the binary on wasm
rust-embed = { version = "6", features = ["interpolate-folder-path", "debug-embed"] }
