[package]
name = "capstone-renderer"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Asynchronous renderer made for capstone"
readme = "README.md"
repository = "https://github.com/cwfitzgerald/capstone"
license = "MPL-2.0"
keywords = []
categories = []

[dependencies]
bytemuck = "1.4"
glam = "0.9"
imgui-wgpu = "0.9"
shaderc = "0.6"
smallvec = "1"
wgpu = "0.6"
wgpu-conveyor = "0.1"
wgpu-subscriber = "0.1"
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "c1ea0dde92e1de9e029e7fbb2485a454aa81b918",  default-features = false, features = ["x11"] }
