[package]
name = "rend3-cube-no-framework-example"
license = "MIT OR Apache-2.0 OR Zlib"
version = "0.2.0"
authors = ["The rend3 Developers"]
edition = "2021"
publish = false
rust-version = "1.57"

[[bin]]
name = "cube-no-framework"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
# Linear algebra library
glam = "0.20.0"
# Renderer core
rend3 = { version = "^0.2.0", path = "../../rend3" }
# Programmable render list that dictates how the scene renders
rend3-routine = { version = "^0.2.0", path = "../../rend3-routine" }
# Provides `block_on` to wait for futures from sync code
pollster = "0.2"
# windowing
winit = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen = "=0.2.78"
wasm-bindgen-futures = "0.4"
