[package]
name = "rend3-cube-example"
license = "MIT OR Apache-2.0 OR Zlib"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "cube"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
# Linear algebra library
glam = "0.19"
# Renderer core
rend3 = { version = "^0.1.0", path = "../../rend3" }
# Programmable render list that dictates how the scene renders
rend3-pbr = { version = "^0.1.0", path = "../../rend3-pbr" }
# Provides `block_on` to wait for futures from sync code
pollster = "0.2"
# windowing
winit = "0.25"
