[package]
name = "rend3-gltf-example"
license = "MIT OR Apache-2.0 OR Zlib"
version = "0.0.5"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "gltf"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Linear algebra library
glam = "0.17"
# parsing model files
gltf = { version = "0.16", features = [ "utils" ] }
# Renderer
rend3 = { path = "../../rend3", version = "^0.0.5"}
rend3-list = { path = "../../rend3-list", version = "^0.0.5"}
# Provides `block_on` to wait for futures from sync code
pollster = "0.2"
# wgpu-aware logging
wgpu-subscriber = "0.1"
# windowing
winit = "0.25"
