[package]
name = "rend3-gltf-example"
license = "MIT OR Apache-2.0 OR Zlib"
version = "0.2.0"
authors = ["The rend3 Developers"]
edition = "2021"
publish = false

[[bin]]
name = "gltf"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
# Linear algebra library
glam = "0.20.0"
# parsing model files
gltf = { version = "0.16", default-features = false, features = ["import", "utils"] }
# Renderer core
rend3 = { version = "^0.2.0", path = "../../rend3"}
# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { version = "^0.2.0", path = "../../rend3-framework" }
# Programmable render list that dictates how the scene renders
rend3-pbr = { version = "^0.2.0", path = "../../rend3-pbr" }
# windowing
winit = { version = "0.25", features = ["web-sys"] }
