[package]
name = "rend3-imgui-example"
license = "MIT OR Apache-2.0 OR Zlib"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
publish = false
rust-version = "1.65"

[[bin]]
name = "imgui"
path = "src/main.rs"

[dependencies]
# logging
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
# The imgui immediate mode gui library
imgui = "0.9"
# Winit integration with imgui
imgui-winit-support = { version = "0.10" }
# Linear algebra library
glam = "0.22"
# Portable implementation of Instant.
instant = { version = "0.1", features = ["wasm-bindgen"] }
# Renderer core
rend3 = { version = "^0.3.0", path = "../../rend3" }
# Egui renderer integration
rend3-imgui = { version = "^0.3.0", path = "../../rend3-imgui" }
# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { version = "^0.3.0", path = "../../rend3-framework" }
# Programmable render list that dictates how the scene renders
rend3-routine = { version = "^0.3.0", path = "../../rend3-routine" }
# Windowing
winit = "0.27"
