[package]
name = "scene-viewer"
version = "0.2.1"
authors = ["The rend3 Developers"]
edition = "2021"
description = "A gltf scene viewer based on the rend3 3D rendering engine."
readme = "README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]
exclude = [
    "data/*",
    "*.jpg",
]

[[bin]]
name = "scene-viewer"
path = "src/main.rs"

[features]
tracy = ["profiling/profile-with-tracy", "tracy-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
glam = "0.20.0"
histogram = "0.6"
image = { version = "0.23", default-features = false, features = ["png", "jpeg", "tiff"]}
log = "0.4"
parking_lot = "0.11"
pico-args = "0.4"
pollster = "0.2"
profiling = { version = "1", default-features = false }
rend3 = { version = "^0.2.0", path = "../../rend3" }
rend3-gltf = { version = "^0.2.0", path = "../../rend3-gltf" }
rend3-pbr = { version = "^0.2.0", path = "../../rend3-pbr" }
rustc-hash = "1"
smallvec = "1"
tracy-client = { version = "0.12", optional = true }
wgpu-profiler = "0.7.0"
winit = { version = "0.25", features = ["web-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.11"
