[package]
name = "scene-viewer"
version = "0.2.1"
authors = ["The rend3 Developers"]
edition = "2021"
description = "A gltf scene viewer based on the rend3 3D rendering engine."
readme = "README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]
rust-version = "1.57"
exclude = [
    "emerald-square.jpg",
    "scifi-base.jpg",
    "screenshot.jpg",
]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "scene-viewer"
path = "src/main.rs"

[features]
tracy = ["profiling/profile-with-tracy", "tracy-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cfg-if = "1"
glam = "0.20.0"
histogram = "0.6"
image = { version = "0.23", default-features = false, features = ["png", "jpeg", "tiff"]}
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
pico-args = "0.4"
profiling = { version = "1", default-features = false }
rend3 = { version = "^0.2.0", path = "../../rend3" }
rend3-gltf = { version = "^0.2.0", default-features = false, path = "../../rend3-gltf", features = ["ddsfile", "ktx2"] }
rend3-framework = { version = "^0.2.0", path = "../../rend3-framework" }
rend3-routine = { version = "^0.2.0", path = "../../rend3-routine" }
rustc-hash = "1"
smallvec = "1"
tracy-client = { version = "0.12", optional = true }
wgpu-profiler = "0.7.0"
winit = "0.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.5", features = ["logger"] }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
assets = "resources"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 28
compile_sdk_version = 28

[package.metadata.android.application.activity]
orientation = "landscape"
